fixed responsive menu drop-down and jumpy logo

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
 	padding-top:      40px;
 	font-family:      "Lato", "Open Sans", Arial, Helvetica, sans-serif;
 	background-color: #eeeeee;
-	min-width:        1024px;
+	min-width:        768px;
 	min-height:       100%;
 	height:           100%;
 }
@@ -69,9 +69,6 @@ body {
 .sidebar {
 	/*display: none;*/
 	background-color: #f5f5f5;
-	position:         relative;
-	height:           100%;
-	min-height:       100%;
 	padding:          20px;
 	overflow-x:       hidden;
 	overflow-y:       auto; /* Scrollable contents if viewport is shorter than content. */
@@ -329,30 +326,27 @@ table.dataTable thead th {
 /* Media Queries                                                                */
 /*------------------------------------------------------------------------------*/
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
 	.main {
 		padding-right: 15px;
 		padding-left:  15px;
 	}
+}
 
+@media (max-width: 768px) {
 	.sidebar {
-		/*position:         fixed;*/
-		/*top:              41px;*/
-		/*bottom:           0;*/
-		/*left:             0;*/
-		/*z-index:          1000;*/
-		/*display:          block;*/
-		/*padding:          20px;*/
-		/*overflow-x:       hidden;*/
-		/*overflow-y:       auto; /!* Scrollable contents if viewport is shorter than content. *!/*/
-		/*background-color: #f5f5f5;*/
-		/*border-right:     1px solid #eeeeee;*/
+		padding: 0;
+	}
+
+	.navbar .navbar-brand {
+		height:      40px;
+		padding-top: 4px;
 	}
 }
 
 @media (max-width: 1199px) {
 	.navbar .navbar-brand {
-		height:      40px;
-		padding-top: 4px;
+		padding: 4px 15px 15px;
+		/* padding: 10px 15px; */
 	}
 }
